bat.string1.lessons.bat.string1.Last2.scala.error
last2:11: error: overloaded method value + with alternatives:
  (x: Double)Double <and>
  (x: Float)Float <and>
  (x: Long)Long <and>
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int <and>
  (x: String)String
 cannot be applied to (Unit)
      println(str.charAt(i)+println(str.charAt(i+1)));
                           ^