bat.string1.lessons.bat.string1.Last2.scala.code
def last2(str:String):Int = {
  var str1 = str.charAt(str.length-2);
  var str2 = str.charAt(str.length-3);
  
  var nb:Int = 0;
  
  println(str);
  
  if(str.length>2){
    for(i<-0 to str.length-2){
      println(str.charAt(i)+println(str.charAt(i+1)));
      
      if(str.charAt(i)==str1 && str.charAt(i+1)==str2){
        nb+=1;
      }
    }
  }
  
  return nb;
}